# ocaml_of_michelson

./: .gitignore  LICENSE  README.md  dune-project  ocaml_of_michelson.opam
.github/workflows/: build.yml
src/: Makefile  README.md  dune  inliner.ml  instSpec.ml  lexer.mll  main.ml  mcLexer.mll  mcParser.mly  mySupport.ml  syntax.ml  trans.ml
test/: KT18fp5rcTW7mbWDmzFwjLDUhs5MeJmagDSZ.tz  KT1KHgz2Eqetzbnidqu2EUc6rBdtukX5i47X.tz  Makefile  dune  inst.mli  test0.tz  test2.tz  test3.tz  test4.tz  testAND.tz  testBool.tz  testCDR.tz  testCREATE_CONTRACT.tz  testCar.tz  testDIG.tz  testDIP.tz  testDIP2.tz  testDIPn.tz  testDROP.tz  testDUG.tz  testDUP.tz  testFAILWITH.tz  testGET.tz  testHEX.tz  testITER.tz  testITER2.tz  testITER3.tz  testITERFAIL.tz  testIf.tz  testIf2.tz  testIfCons.tz  testIfLeft.tz  testIfNone.tz  testIfNone2.tz  testLOOP.tz  testLOOP2.tz  testLOOPFAIL.tz  testLOOP_LEFT.tz  testLOOP_LEFT2.tz  testLOOP_LEFTFAIL.tz  (+15 more)
